Create a binary JDK and stubs format (#1853)